wip: add boltdb as a backend storage provider
