# api/api.yaml
@@ -13,12 +13,12 @@ paths:
         - targets
       responses:
         '200':
-          description: List of ScrapeTargets
+          description: Listing successful
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/ScrapeTarget"
-  /targets/{name}/instances:
+  /targets/{target}/instances:
     put:
       summary: Update Instances for a ScrapeTarget
       operationId: UpdateInstances
@@ -32,13 +32,31 @@ paths:
               $ref: '#/components/schemas/Instances'
       parameters:
         - in: path
-          name: name
+          name: target
           required: true
           schema:
             type: string
       responses:
         200:
           description: Status update successful
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Instances"
+    get:
+      summary: Get Instances for a ScrapeTarget
+      operationId: GetInstances
+      tags:
+        - instances
+      parameters:
+        - in: path
+          name: target
+          required: true
+          schema:
+            type: string
+      responses:
+        200:
+          description: Listing successful
           content:
             application/json:
               schema:
@@ -56,8 +74,6 @@ components:
           type: string
         instanceSpec:
           $ref: '#/components/schemas/InstanceSpec'
-        instances:
-          $ref: '#/components/schemas/Instances'
     InstanceSpec:
       type: object
       properties:
@@ -74,6 +90,8 @@ components:
       type: object
       properties:
         name:
+          type: string
+        target:
           type: string
         endpoint:
           type: string
